--- a/DailyPnL.ipynb
+++ b/DailyPnL.ipynb
@@ -21,8 +21,8 @@
     "\n",
     "# Login\n",
     "api = sj.Shioaji(simulation=False) ###True為測試環境###\n",
-    "api.login(\"55XZFbWTy1edQAkJF8dwtUyG6LGXMSULyPjBTMJKYGZ9\",\n",
-    "        \"BHhdSj7FC7QSbu54Lc8FZ9bx819D1s6rzsdpF6sR5axK\")\n",
+    "api.login(\"#API TOKEN\",\n",
+    "        \"#API TOKEN\")\n",
     "\n",
     "print('Login')\n",
     "\n",
