--- a/DailyPnL.ipynb
+++ b/DailyPnL.ipynb
@@ -78,8 +78,8 @@
     "\n",
     "    # Login\n",
     "    api = sj.Shioaji(simulation=False) ###True為測試環境###\n",
-    "    api.login(\"55XZFbWTy1edQAkJF8dwtUyG6LGXMSULyPjBTMJKYGZ9\",\n",
-    "            \"BHhdSj7FC7QSbu54Lc8FZ9bx819D1s6rzsdpF6sR5axK\")\n",
+    "    api.login(\"#API TOKEN\",\n",
+    "            \"#API TOKEN\")\n",
     "\n",
     "    print('Login')\n",
     "\n",
@@ -118,7 +118,7 @@
     "    def lineNotifyMessage(msg):\n",
     "\n",
     "            headers = {\n",
-    "            \"Authorization\": \"Bearer \" + 'jbScjQe6jY16zTILgQMN1REp6UHeJgCNAXFdJ82P8TZ', \n",
+    "            \"Authorization\": \"Bearer \" + '#API TOKEN', \n",
     "            \"Content-Type\" : \"application/x-www-form-urlencoded\"\n",
     "            }\n",
     "\n",
